discarded/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-db
spec:
  containers:
    - name: mysql-db
      image: gcr.io/kubernetes-195622/mysql
  imagePullSecrets:
    - name: registrypullsecret
