discarded/infrastructure-qa-basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice-ingress
spec:
  backend:
    serviceName: microservice
    servicePort: 80
